FIX overflow-x on project page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,8 +20,8 @@
   background-size: cover;
 }
 
-body {
-  /* overflow-x: hidden; */
+html, body {
+  overflow-x: hidden;
 }
 
 a {
